# recon-fuzzer

./: .gitignore  Cargo.toml  LICENSE  README.md  Rvm.sol
.claude/: settings.local.json
.github/workflows/: release.yml
abi/: Cargo.toml
abi/src/: gen.rs  lib.rs  mutable.rs  mutate.rs  mutate_tests.rs  mutator_array.rs  shrink.rs  types.rs
analysis/: Cargo.toml
analysis/src/: bytecode.rs  lib.rs  slither.rs
browser-fuzzer/: Cargo.toml  build.sh
browser-fuzzer/src/: lib.rs
browser-fuzzer/src/abi/: gen.rs  mod.rs  mutable.rs  mutate.rs  mutator_array.rs  shrink.rs  types.rs
browser-fuzzer/src/campaign/: config.rs  execution.rs  mod.rs  transaction.rs  types.rs  worker_env.rs
browser-fuzzer/src/campaign/corpus/: mod.rs  mutator.rs
browser-fuzzer/src/campaign/shrink/: core.rs  mod.rs
browser-fuzzer/src/campaign/testing/: check.rs  mod.rs  types.rs
browser-fuzzer/src/evm/: cheatcodes.rs  foundry.rs  mod.rs
browser-fuzzer/src/evm/coverage/: inspector.rs  mod.rs
browser-fuzzer/src/evm/exec/: mod.rs
browser-fuzzer/src/evm/tracing/: decoder.rs  mod.rs
browser-fuzzer/web/: app.js  coordinator.js  fuzz-worker.js  index.html  server.py  worker.js
campaign/: Cargo.toml
campaign/benches/: fuzz_hotpath.rs  shrink_contention.rs
campaign/src/: campaign.rs  config.rs  dynamic_linking.rs  execution.rs  export.rs  fork_value_extractor.rs  injection.rs  lib.rs  output.rs  shortcuts.rs  status.rs  transaction.rs  types.rs  web.rs  worker_env.rs  world.rs
campaign/src/corpus/: loader.rs  mod.rs  mutator.rs
campaign/src/repro/: codegen.rs  formatter.rs  mod.rs  writer.rs
campaign/src/shrink/: core.rs  mod.rs  worker.rs
campaign/src/testing/: check.rs  mod.rs  types.rs  worker.rs
campaign/templates/: test_function.sol.jinja
cli/: Cargo.toml
cli/src/: hot_reload.rs  main.rs
cli/tests/: integration_tests.rs
config/: Cargo.toml
config/src/: campaign.rs  global.rs  lib.rs  solidity.rs  transaction.rs
evm/: Cargo.toml
evm/benches/: execution.rs  shrink_hotpath.rs
evm/src/: cheatcodes.rs  foundry.rs  lib.rs  serde_utils.rs  storage_layout.rs  storage_layout_compact.rs  types.rs
evm/src/coverage/: inspector.rs  mod.rs  onchain.rs  source.rs  unified.rs
evm/src/exec/: helpers.rs  mod.rs  state.rs  tests.rs  transaction.rs
evm/src/fork/: abi_decompiler.rs  cache.rs  error.rs  fork_db.rs  forkable_db.rs  mod.rs  rate_limiter.rs  tests.rs
evm/src/tracing/: decoder.rs  inspector.rs  mod.rs
primitives/: Cargo.toml
primitives/src/: address.rs  constants.rs  lib.rs  traits.rs
web-core/: Cargo.toml
web-core/src/: lib.rs  protocol.rs  server.rs  state.rs  ws.rs
web-ui/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
web-ui/public/wasm/: evmole_bg.wasm
web-ui/src/app/: globals.css  layout.tsx  page.tsx
web-ui/src/components/cfg/: CFGNode.tsx  CFGView.tsx
web-ui/src/components/common/: Panel.tsx  StatusIndicator.tsx
web-ui/src/components/coverage/: BytecodeHeatmap.tsx  CoveragePanel.tsx  SourceCoverageView.tsx  index.ts
web-ui/src/components/interactive/: InteractivePanel.tsx
web-ui/src/components/layout/: BottomPanel.tsx  Sidebar.tsx  TopBar.tsx
web-ui/src/components/replay/: ReplayModal.tsx
web-ui/src/components/source/: SourceView.tsx
web-ui/src/hooks/: index.ts  useContractDetails.ts  useFuzzerConnection.ts
web-ui/src/lib/: cfgBuilder.ts  txSerializer.ts  utils.ts
web-ui/src/stores/: fuzzerStore.ts
web-ui/src/types/: index.ts  protocol.ts
