[workspace]
resolver = "2"
members = [
    "primitives",
    "config",
    "analysis",
    "evm",
    "cli",
    "campaign",
    "abi",
    "web-core",
]

[workspace.package]
version = "0.4.9"
edition = "2021"
license = "GPL-2.0"
authors = ["Recon-Fuzzer Contributors"]

[workspace.dependencies]
# EVM
revm = { version = "38.0.0", default-features = false, features = ["blst", "c-kzg", "portable", "secp256k1", "std", "serde", "tracer", "optional_balance_check", "optional_block_gas_limit", "optional_eip3607", "optional_no_base_fee"] }

# Ethereum primitives
alloy = { version = "1.7.3", features = ["full"] }
alloy-primitives = { version = "1.5.7", features = ["serde"] }
alloy-sol-types = "1.5.7"
alloy-json-abi = "1.5.7"
alloy-dyn-abi = "1.5.7"

# Async
tokio = { version = "1.49", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random
rand = "0.8"
rand_chacha = "0.3"

# Parallel
rayon = "1.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
primitives = { path = "primitives" }
config = { path = "config" }
analysis = { path = "analysis" }
campaign = { path = "campaign" }
abi = { path = "abi" }
evm = { path = "evm" }
recon-web = { path = "web-core" }

# Hex encoding
hex = "0.4"
hex-literal = "1.1.0"
askama = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
