[package]
name = "abi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
primitives.workspace = true
analysis.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-json-abi.workspace = true
alloy-dyn-abi.workspace = true

serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
