[workspace]

[package]
name = "browser-fuzzer"
version = "0.1.0"
edition = "2021"
description = "Browser-based EVM fuzzer using WebAssembly"
repository = "https://github.com/Recon-Fuzz/recon-fuzzer"
license = "GPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
revm = { version = "34.0.0", default-features = false, features = [
    "std",
    "portable",
    "serde",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }
revm-inspector = "15.0"
revm-database = "10.0"
alloy-primitives = { version = "1.5", features = ["serde"] }
alloy-sol-types = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
hex = "0.4"
hex-literal = "0.4"
getrandom = { version = "0.2", features = ["js"] }
alloy-json-abi = "1.5"
alloy-dyn-abi = { version = "1.5", features = ["std"] }
rand = { version = "0.8", features = ["small_rng"] }
revm-inspectors = { version = "0.34", default-features = false, features = ["std"] }
tracing = "0.1"
wasm_safe_mutex = "0.2"
k256 = { version = "0.13.4", features = ["ecdsa"] }
js-sys = "0.3"
