[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "recon"
path = "src/main.rs"

[dependencies]
abi.workspace = true
analysis.workspace = true
campaign.workspace = true
config.workspace = true
evm.workspace = true
recon-web.workspace = true


clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
alloy-primitives.workspace = true
alloy-dyn-abi.workspace = true
ctrlc = "3.5"
hex.workspace = true
yaml_serde = "0.10"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
alloy-json-abi.workspace = true
crossbeam-channel = "0.5"
dirs = "6.0.0"

[dev-dependencies]
abi.workspace = true
rand.workspace = true
parking_lot = "0.12"
