[package]
name = "evm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
primitives.workspace = true
config.workspace = true
abi.workspace = true

revm = { workspace = true, features = ["std", "serde"] }
revm-inspector = "19.0"
revm-inspectors = { version = "0.39", default-features = false, features = ["std"] }
alloy.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-json-abi.workspace = true
alloy-dyn-abi.workspace = true
alloy-provider = { version = "1.7", default-features = false, features = ["reqwest"] }
alloy-rpc-types = "1.7"
alloy-transport = "1.7"
alloy-transport-http = "1.7"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking", "json"] }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
hex = "0.4"
evmole = "0.8.2"
rand.workspace = true
rand_chacha.workspace = true
parking_lot = "0.12"
sha3 = "0.10"
k256 = { version = "0.13.4", features = ["ecdsa"] }
rustc-hash = "2.1"
hashbrown = "0.16"
dirs = "6.0"