[package]
name = "evm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
primitives.workspace = true
config.workspace = true
abi.workspace = true

revm = { workspace = true, features = ["std", "serde"] }
revm-inspector = "21.0"
revm-inspectors = { version = "0.40", default-features = false, features = ["std"] }
alloy.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-json-abi.workspace = true
alloy-dyn-abi.workspace = true
alloy-provider = { version = "2.0", default-features = false, features = ["reqwest"] }
alloy-rpc-types = "2.0"
alloy-transport = "2.0"
alloy-transport-http = "2.0"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "blocking", "json"] }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
hex = "0.4"
evmole = "0.8.2"
rand.workspace = true
rand_chacha.workspace = true
parking_lot = "0.12"
sha3 = "0.12"
k256 = { version = "0.13.4", features = ["ecdsa"] }
rustc-hash = "2.1"
hashbrown = "0.17"
dirs = "6.0"
scraper = { version = "0.27", default-features = false }

[dev-dependencies]
filetime = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "execution"
harness = false

[[bench]]
name = "shrink_hotpath"
harness = false